# Soroban_Cookbook_online

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  ISSUE_196_VERIFICATION.md  PHASE_5_6_SUMMARY.md  PR_BODY.md  README.md  WORK_SUMMARY.md  logs.txt  task.md  test_logs.txt
.github/: UAT_SCENARIOS.md  UAT_TEMPLATE.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/workflows/: ci.yml
.kiro/specs/mobile-responsive-tables/: design.md  requirements.md  tasks.md
.kiro/specs/seo-audit/: design.md  requirements.md  tasks.md
documentation/: .gitignore  .performancebudget.json  MOBILE_PERFORMANCE.md  docusaurus.config.ts  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  sidebars.ts
documentation/docs/: contributing.md  index.md
documentation/docs/concepts/: authorization.md  storage.md
documentation/docs/contributing/: mobile-performance.md
documentation/docs/design-system/: empty-states.mdx
documentation/docs/getting-started/: debugging.md
documentation/docs/patterns/: lifecycle-upgrades.mdx  overview.md  staking.mdx
documentation/docs/qa/: manual-test-protocol.md
documentation/docs/security/: fundamentals.md  governance.md
documentation/e2e/: navigation.spec.ts  smoke-console.spec.ts
documentation/e2e/helpers/: console.ts
documentation/src/css/: breakpoints.css  custom.css  (+3 more)
examples/: Cargo.toml
examples/staking/: Cargo.toml
examples/upgradeable/: Cargo.toml
examples/upgradeable/v2/: Cargo.toml
examples/upgradeable/v2/src/: lib.rs
scripts/: test-examples.sh
(+28 files in other folders)
